--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -734,6 +734,81 @@
     </xpath>
 </template>
 
+<!-- "search" template -->
+<template id="template_header_search" inherit_id="website.layout" name="Template Header Search" active="False">
+    <xpath expr="//header//nav" position="replace">
+        <t t-call="website.navbar">
+            <t t-set="_navbar_classes" t-valuef="d-none d-lg-block p-0 shadow-sm"/>
+
+            <div id="top_menu_container" class="flex-wrap">
+                <nav aria-label="Top" class="border-bottom o_border_contrast">
+                    <div class="container d-flex justify-content-between flex-wrap w-100">
+                        <ul class="o_header_search_left_col navbar-nav flex-wrap">
+                            <!-- Language Selector -->
+                            <t t-call="website.placeholder_header_language_selector">
+                                <t t-set="_div_classes" t-valuef="h-100 border-end o_border_contrast"/>
+                                <t t-set="_btn_class" t-valuef="o_navlink_background_hover btn-sm d-flex align-items-center h-100 p-2 rounded-0 text-reset"/>
+                            </t>
+                            <!-- Text element -->
+                            <t t-call="website.placeholder_header_text_element">
+                                <t t-set="_txt_elt_content" t-valuef="sentence"/>
+                                <t t-set="_div_class" t-valuef="d-flex align-items-center h-100 p-2 border-end text-muted o_border_contrast"/>
+                            </t>
+                        </ul>
+                        <ul class="navbar-nav flex-wrap">
+                            <!-- Social Links -->
+                            <t t-call="website.placeholder_header_social_links">
+                                <t t-set="_div_class" t-valuef="d-flex align-items-center h-100 px-1 border-start o_border_contrast"/>
+                            </t>
+                            <!-- Sign In -->
+                            <t t-call="portal.placeholder_user_sign_in">
+                                <t t-set="_link_class" t-valuef="o_navlink_background_hover btn btn-sm d-flex align-items-center h-100 px-3 rounded-0 border-0 border-start text-reset o_border_contrast"/>
+                            </t>
+                            <!-- User Dropdown -->
+                            <t t-call="portal.user_dropdown">
+                                <t t-set="_user_name" t-value="true"/>
+                                <t t-set="_item_class" t-valuef="dropdown border-start o_border_contrast"/>
+                                <t t-set="_link_class" t-valuef="o_navlink_background_hover btn-sm d-flex align-items-center h-100 p-2 rounded-0 text-reset"/>
+                                <t t-set="_dropdown_menu_class" t-valuef="dropdown-menu-end"/>
+                            </t>
+                        </ul>
+                    </div>
+                </nav>
+                <nav aria-label="Bottom" class="container d-grid align-items-center w-100 py-2 o_grid_header_3_cols">
+                    <!-- Navbar -->
+                    <t t-call="website.navbar_nav">
+                        <t t-set="_nav_class" t-valuef="me-4"/>
+
+                        <!-- Menu -->
+                        <t t-foreach="website.menu_id.child_id" t-as="submenu">
+                            <t t-call="website.submenu">
+                                <t t-set="item_class" t-valuef="nav-item"/>
+                                <t t-set="link_class" t-valuef="nav-link"/>
+                            </t>
+                        </t>
+                    </t>
+                    <!-- Brand -->
+                    <t t-call="website.placeholder_header_brand">
+                        <t t-set="_link_class" t-valuef="mw-100 mx-auto"/>
+                    </t>
+                    <ul class="o_header_search_right_col navbar-nav align-items-center gap-2 ms-auto ps-3">
+                        <!-- Search bar -->
+                        <t t-call="website.placeholder_header_search_box">
+                            <t t-set="_input_classes" t-valuef="ps-3 border border-end-0 rounded-start-pill bg-o-color-4"/>
+                            <t t-set="_submit_classes" t-valuef="pe-3 border border-start-0 rounded-end-pill bg-o-color-4"/>
+                        </t>
+                        <!-- Call To Action -->
+                        <t t-call="website.header_call_to_action_pill"/>
+                    </ul>
+                </nav>
+            </div>
+        </t>
+        <t t-call="website.template_header_mobile">
+            <t t-set="_txt_elt_content" t-valuef="sentence"/>
+        </t>
+    </xpath>
+</template>
+
 <!-- Header options -->
 <template id="option_layout_hide_header" inherit_id="website.layout" active="False">
     <xpath expr="//header" position="before">
