--- a/addons/website/static/src/scss/primary_variables.scss
+++ b/addons/website/static/src/scss/primary_variables.scss
@@ -8,6 +8,8 @@ $o-base-color-palette: map-merge($o-base-color-palette, (
     'menu': 1, // o_cc1
     'menu-custom': null,
     'menu-border-color': null, // Default to classes used on the template
+    'header-sales_one': 2,
+    'header-sales_one-custom': null,
     'footer': 5, // o_cc5
     'footer-custom': null,
     'copyright': null,
@@ -2014,6 +2016,7 @@ $o-base-website-values-palette: (
 
     // Gradients
     'menu-gradient': null,
+    'header-sales_one-gradient': null,
     'footer-gradient': null,
     'copyright-gradient': null,
 
