--- a/addons/website/static/src/scss/primary_variables.scss
+++ b/addons/website/static/src/scss/primary_variables.scss
@@ -12,6 +12,8 @@ $o-base-color-palette: map-merge($o-base-color-palette, (
     'header-sales_one-custom': null,
     'header-sales_two': 5,
     'header-sales_two-custom': null,
+    'header-sales_three': 2,
+    'header-sales_three-custom': null,
     'footer': 5, // o_cc5
     'footer-custom': null,
     'copyright': null,
@@ -2020,6 +2022,7 @@ $o-base-website-values-palette: (
     'menu-gradient': null,
     'header-sales_one-gradient': null,
     'header-sales_two-gradient': null,
+    'header-sales_three-gradient': null,
     'footer-gradient': null,
     'copyright-gradient': null,
 
