--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -48,7 +48,7 @@ $-seen-urls: ();
     // 3) The values in the $colors map are also printed by Bootstrap. However,
     // we have color variables which can contain a reference to a color
     // combination and that is the info we want in that case.
-    @each $key in ('menu', 'header-sales_one', 'header-sales_two', 'footer', 'copyright') {
+    @each $key in ('menu', 'header-sales_one', 'header-sales_two', 'header-sales_three', 'footer', 'copyright') {
         $-value: map-get($o-color-palette, $key);
         @if type-of($-value) == 'number' {
             @include print-variable($key, $-value);
@@ -1156,6 +1156,12 @@ header {
         @include o-apply-colors('header-sales_two');
         @include o-apply-colors('header-sales_two-custom');
         @include o-add-gradient('header-sales_two-gradient');
+    }
+} @else if o-website-value('header-template') == 'sales_three' {
+    #wrapwrap .o_header_sales_three_top {
+        @include o-apply-colors('header-sales_three');
+        @include o-apply-colors('header-sales_three-custom');
+        @include o-add-gradient('header-sales_three-gradient');
     }
 }
 
