--- a/addons/website/static/src/scss/primary_variables.scss
+++ b/addons/website/static/src/scss/primary_variables.scss
@@ -14,6 +14,8 @@ $o-base-color-palette: map-merge($o-base-color-palette, (
     'header-sales_two-custom': null,
     'header-sales_three': 2,
     'header-sales_three-custom': null,
+    'header-sales_four': 1,
+    'header-sales_four-custom': null,
     'footer': 5, // o_cc5
     'footer-custom': null,
     'copyright': null,
@@ -2023,6 +2025,7 @@ $o-base-website-values-palette: (
     'header-sales_one-gradient': null,
     'header-sales_two-gradient': null,
     'header-sales_three-gradient': null,
+    'header-sales_four-gradient': null,
     'footer-gradient': null,
     'copyright-gradient': null,
 
