--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -148,6 +148,18 @@
         </xpath>
     </template>
 
+    <template id="template_header_sidebar" inherit_id="website.template_header_sidebar">
+        <xpath expr="//t[@t-call='website.placeholder_header_brand']" position="after">
+            <div class="d-flex ms-auto mb-0">
+                <t t-call="website_sale.header_cart_link">
+                    <t t-set="_icon" t-value="True"/>
+                    <t t-set="_link_class" t-value="'o_navlink_background_hover btn position-relative p-1 rounded-circle text-reset'"/>
+                    <t t-set="_badge_class" t-value="'position-absolute top-0 end-0 rounded-pill mt-n1 me-n1'"/>
+                </t>
+            </div>
+        </xpath>
+    </template>
+
     <!-- Search Bar input-group template -->
     <template id="search" name="Search Box" active="True">
         <t t-call="website.website_search_box_input">
