--- a/addons/account_payment/views/account_portal_templates.xml
+++ b/addons/account_payment/views/account_portal_templates.xml
@@ -59,22 +59,25 @@
     </template>
 
     <template id="portal_invoice_page_inherit_payment" name="Payment on My Invoices" inherit_id="account.portal_invoice_page">
+        <xpath expr="//t[@t-call='portal.portal_record_sidebar']//h2[hasclass('mb-2')]" position="after">
+                <div t-if="invoice.payment_state in ('paid', 'in_payment')" class="bg-success-light text-success h-100 lh-1 badge mb-2 rounded fw-normal fs-6">
+                    <i class="fa fa-fw fa-check-circle"/> Paid
+                </div>
+                <div t-else="pending_txs" class="bg-primary-light text-primary h-100 lh-1 badge mb-xxl-2 rounded fw-normal fs-6" >
+                    <i class="fa fa-fw fa-check-circle"/> Pending
+                </div>
+        </xpath>
         <xpath expr="//t[@t-call='portal.portal_record_sidebar']//div[hasclass('o_download_pdf')]" position="before">
             <t t-set="pending_txs" t-value="invoice.transaction_ids.filtered(lambda tx: tx.state in ('pending', 'authorized') and tx.provider_code not in ('none', 'custom'))"/>
             <div class="d-grid">
-                <div t-if="invoice.payment_state in ('paid', 'in_payment')" class="alert alert-success py-1 mb-2" >
-                    <i class="fa fa-fw fa-check-circle"/> Paid
-                </div>
-                <a t-elif="invoice._has_to_be_paid()"
+                <a t-if="invoice._has_to_be_paid()"
                    href="#"
                    class="btn btn-primary mb-2"
                    data-bs-toggle="modal"
                    data-bs-target="#pay_with">
                     <i class="fa fa-fw fa-arrow-circle-right"/> Pay Now
                 </a>
-                <div t-elif="pending_txs" class="alert alert-info py-1 mb-2" >
-                    <i class="fa fa-fw fa-check-circle"/> Pending
-                </div>
+
             </div>
         </xpath>
         <xpath expr="//div[@id='invoice_content']//div[hasclass('o_portal_html_view')]" position="before">
