--- a/addons/sale/views/sale_portal_templates.xml
+++ b/addons/sale/views/sale_portal_templates.xml
@@ -21,14 +21,16 @@
     <template id="portal_my_home_sale" name="Show Quotations / Sales Orders" customize_show="True" inherit_id="portal.portal_my_home" priority="20">
         <xpath expr="//div[hasclass('o_portal_docs')]" position="inside">
             <t t-call="portal.portal_docs_entry">
-                <t t-set="title">Quotations</t>
-                <t t-set="url" t-value="'/my/quotes'"/>
+                <t t-set="bg_color" t-value="'alert alert-primary'"/>
                 <t t-set="placeholder_count" t-value="'quotation_count'"/>
+                <t t-set="title">Quotation(s) to review</t>
+                <t t-set="url" t-value="'/my/quotes'"/>
             </t>
             <t t-call="portal.portal_docs_entry">
+                <t t-set="icon" t-value="'/sale/static/src/img/bag.svg'"/>
                 <t t-set="title">Sales Orders</t>
                 <t t-set="url" t-value="'/my/orders'"/>
-                <t t-set="placeholder_count" t-value="'order_count'"/>
+                <t t-set="text">Follow, view or pay your orders</t>
             </t>
         </xpath>
     </template>
@@ -39,6 +41,11 @@
 
             <t t-call="portal.portal_searchbar">
                 <t t-set="title">Quotations</t>
+            </t>
+            <t t-if="not quotations">
+                <div class="alert alert-warning" role="alert">
+                    There are currently no quotations for your account.
+                </div>
             </t>
             <t t-if="quotations" t-call="portal.portal_table">
                 <thead>
@@ -56,9 +63,9 @@
                         <td class="text-end"><span t-field="quotation.date_order"/></td>
                         <td class="text-end"><span t-field="quotation.validity_date"/></td>
                         <td class="text-center">
-                            <span t-if="quotation.state == 'cancel'" class="badge rounded-pill text-bg-secondary">
+                            <span t-if="quotation.state == 'cancel'" class="badge rounded-pill bg-danger-light text-danger fw-normal">
                                 <i class="fa fa-fw fa-remove"/> Cancelled</span>
-                            <span t-if="quotation.is_expired" class="badge rounded-pill text-bg-secondary">
+                            <span t-if="quotation.is_expired" class="badge rounded-pill bg-danger-light text-danger fw-normal">
                                 <i class="fa fa-fw fa-clock-o"/> Expired</span>
                         </td>
                         <td class="text-end">
@@ -67,7 +74,6 @@
                     </tr>
                 </t>
             </t>
-            <p t-else="">There are currently no quotations for your account.</p>
         </t>
     </template>
 
@@ -77,6 +83,11 @@
 
             <t t-call="portal.portal_searchbar">
                 <t t-set="title">Sales Orders</t>
+            </t>
+            <t t-if="not orders">
+                <div class="alert alert-warning" role="alert">
+                   There are currently no sales orders for your account.
+                </div>
             </t>
             <t t-if="orders" t-call="portal.portal_table">
                 <thead>
@@ -106,7 +117,6 @@
                     </tr>
                 </t>
             </t>
-            <p t-else="">There are currently no orders for your account.</p>
         </t>
     </template>
 
@@ -121,14 +131,14 @@
             <div class="row mt16 o_portal_sale_sidebar">
                 <!-- Sidebar -->
                 <t t-call="portal.portal_record_sidebar">
-                    <t t-set="classes" t-value="'col-lg-auto d-print-none'"/>
+                    <t t-set="classes" t-value="'col-lg-3 d-print-none mx-lg-0'"/>
 
                     <t t-set="title">
-                        <h2 class="mb-0"><b t-field="sale_order.amount_total" data-id="total_amount"/> </h2>
+                        <h2 class="mb-2"><b t-field="sale_order.amount_total" data-id="total_amount"/> </h2>
                     </t>
                     <t t-set="entries">
-                        <ul class="list-group list-group-flush flex-wrap flex-row flex-lg-column">
-                            <li class="list-group-item d-grid align-content-start">
+                        <div class="flex-wrap flex-row flex-lg-column">
+                            <div class="d-grid align-content-start">
                                 <a t-if="sale_order._has_to_be_signed()" role="button" class="btn btn-primary mb8" data-bs-toggle="modal" data-bs-target="#modalaccept" href="#">
                                     <i class="fa fa-check"/><t t-if="sale_order._has_to_be_paid()"> Sign &amp; Pay</t><t t-else=""> Accept &amp; Sign</t>
                                 </a>
@@ -143,18 +153,18 @@
                                         <a class="btn btn-secondary o_print_btn o_portal_invoice_print" t-att-href="sale_order.get_portal_url(report_type='pdf')" id="print_invoice_report" title="Print" target="_blank"><i class="fa fa-print"/> Print</a>
                                     </div>
                                 </div>
-                            </li>
+                            </div>
 
-                            <li class="navspy list-group-item ps-0 flex-grow-1" t-ignore="true" role="complementary">
+                            <div class="navspy ps-0 flex-grow-1 py-2 px-3" t-ignore="true" role="complementary">
                                 <ul class="nav flex-column bs-sidenav"></ul>
-                            </li>
+                            </div>
 
                             <t t-if="not sale_order.is_expired and sale_order.state in ['draft', 'sent']">
-                                <li t-if="sale_order.validity_date" class="list-group-item">
-                                    <small><b class="text-muted">This offer expires on</b></small>
+                                <div t-if="sale_order.validity_date">
+                                    <small><b>This offer expires on</b></small>
                                     <div t-field="sale_order.validity_date"></div>
-                                </li>
-                                <li t-if="sale_order.amount_undiscounted - sale_order.amount_untaxed &gt; 0.01" class="list-group-item flex-grow-1">
+                                </div>
+                                <div t-if="sale_order.amount_undiscounted - sale_order.amount_untaxed &gt; 0.01" class="list-group-item flex-grow-1">
                                     <small><b class="text-muted">Your advantage</b></small>
                                     <small>
                                         <b t-field="sale_order.amount_undiscounted"
@@ -170,34 +180,30 @@
                                         <h4 t-field="sale_order.amount_untaxed" class="text-success mb-0" data-id="total_untaxed"/>
                                         <small>(<span t-field="sale_order.amount_total" data-id="total_amount"/> Incl. tax)</small>
                                     </t>
-                                </li>
+                                </div>
                             </t>
 
-                            <li t-if="sale_order.user_id" class="list-group-item flex-grow-1">
-                                <div class="small mb-1">
-                                    <strong class="text-muted">Salesperson</strong>
-                                </div>
-                                <div class="row flex-nowrap">
-                                    <div class="col flex-grow-0 pe-2">
-                                        <img class="rounded-circle mr4 float-start o_portal_contact_img"
-                                            t-att-src="image_data_uri(sale_order.user_id.avatar_1024)"
-                                            alt="Contact"/>
+                            <div t-if="sale_order.user_id" class="mt-4 mt-md-0 mt-lg-4 flex-grow-1">
+                                <h6><small class="text-muted">Your contact</small></h6>
+                                <div class="o_portal_contact_details d-flex flex-column gap-2">
+                                    <div class="d-flex justify-content-start align-items-center gap-2">
+                                        <img class="rounded-circle o_portal_contact_img" t-att-src="image_data_uri(sale_order.user_id.avatar_1024)" alt="Contact"/>
+                                        <div>
+                                            <h6 class="mb-0" t-out="sale_order.user_id.name"/>
+                                            <a href="#discussion" class="d-flex align-items-center gap-2 small fw-bold">
+                                            Send message
+                                            </a>
+                                        </div>
                                     </div>
-                                    <div class="col ps-0" style="min-width: 150px">
-                                        <span t-field="sale_order.user_id"
-                                            t-options='{"widget": "contact", "fields": ["name", "phone"], "no_marker": True}'/>
-                                        <a href="#discussion" class="small">
-                                            <i class="fa fa-comment"></i> Send message
-                                        </a>
-                                    </div>
+                                    <div t-out="sale_order.user_id" t-options='{"widget": "contact", "fields": ["city", "phone"]}'/>
                                 </div>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
                     </t>
                 </t>
 
                 <!-- Page content -->
-                <div id="quote_content" class="col-12 col-lg justify-content-end">
+                <div id="quote_content" class="col-12 col-lg-9 mt-5 mt-lg-0">
 
                     <!-- modal relative to the actions sign and pay -->
                     <div role="dialog" class="modal fade" id="modalaccept">
@@ -336,7 +342,7 @@
                     </div>
 
                     <!-- main content -->
-                    <div t-attf-class="card #{'pb-5' if report_type == 'html' else ''}" id="portal_sale_content">
+                    <div t-attf-class="#{'pb-5' if report_type == 'html' else ''}" id="portal_sale_content">
                         <div t-call="#{sale_order._get_name_portal_content_view()}"/>
                     </div>
 
@@ -362,8 +368,9 @@
                     </div>
 
                     <!-- chatter -->
-                    <div id="sale_order_communication" class="mt-4">
-                        <h2>History</h2>
+                    <hr/>
+                    <div id="sale_order_communication">
+                        <h4>History</h4>
                         <t t-call="portal.message_thread"/>
                     </div>
                 </div><!-- // #quote_content -->
@@ -378,14 +385,14 @@
     -->
     <template id="sale_order_portal_content" name="Sales Order Portal Content">
         <!-- Intro -->
-        <div id="introduction" t-attf-class="pb-2 pt-3 #{'card-header bg-white' if report_type == 'html' else ''}">
+        <div id="introduction" t-attf-class="#{'border-bottom-0 bg-white pt-0 pb-3' if report_type == 'html' else ''}">
           <h2 class="my-0">
                 <t t-out="sale_order.type_name"/>
                 <em t-out="sale_order.name"/>
             </h2>
         </div>
 
-        <div t-attf-class="#{'card-body' if report_type == 'html' else ''}">
+        <div>
             <!-- Informations -->
             <div id="informations">
                 <div t-if="sale_order.transaction_ids and not invoices and sale_order.state in ('sent', 'sale') and portal_confirmation == 'pay' and not success and not error" t-att-data-order-id="sale_order.id">
@@ -448,14 +455,14 @@
                                         </a>
                                         <div class="small d-lg-inline-block">Date: <span class="text-muted" t-field="i.invoice_date"/></div>
                                     </div>
-                                    <span t-if="i.payment_state in ('paid', 'in_payment')" class="small badge text-bg-success orders_label_text_align">
+                                    <span t-if="i.payment_state in ('paid', 'in_payment')" class="small badge text-succes bg-success-light orders_label_text_align">
                                         <i class="fa fa-fw fa-check"/> <b>Paid</b>
                                     </span>
-                                    <span t-elif="authorized_tx_ids" class="small badge text-bg-success orders_label_text_align">
+                                    <span t-elif="authorized_tx_ids" class="small badge bg-success-light text-success orders_label_text_align">
                                         <i class="fa fa-fw fa-check"/> <b>Authorized</b>
                                     </span>
-                                    <span t-else="" class="small badge text-bg-info orders_label_text_align">
-                                        <i class="fa fa-fw fa-clock-o"/> <b>Waiting Payment</b>
+                                    <span t-else="" class="small badge bg-primary-light text-primary orders_label_text_align fw-normal">
+                                        <i class="fa fa-fw fa-clock-o"/>Waiting Payment
                                     </span>
                                 </div>
                             </t>
@@ -605,7 +612,6 @@
 
             <section t-if="not is_html_empty(sale_order.note)" id="terms" class="mt-5">
                 <h3 class="">Terms &amp; Conditions</h3>
-                <hr class="mt-0 mb-1"/>
                 <t t-if="sale_order.terms_type == 'html'">
                     <!-- Note is plain text. This ensures a clickable link  -->
                     <t t-set="tc_url" t-value="'%s/terms' % (sale_order.get_base_url())"/>
