[FIX] website, website_sale: default theme adapt.
=== ISSUE 1 ===
Prior to the default theme redesign, accordion component was customized
to have no borders on `.accordion-items`. Now, borders were added back
on each `.accordion-button`. This creates border issue with this
previous customisation in `.o_wsale_offcanvas` and
`products_attributes_filters` accordion items.

This commit fixes this issue.

=== ISSUE 2 ===
Prior to this commit, `.o_wsale_offcanvas` had always white background,
which created color and contrast issue when the background page was
changed.

This commit fixes this issue by using preset color in
`.o_wsale_offcanvas`.

=== ISSUE 3 ===
Prior to this commit, `products_header` had margin issues between
buttons and inputs.

This commit fixes these issues using `gap-3`.

=== ISSUE 4 ===
Prior to this commit, the left column filter would hide overflowing
elements, creating a layout issue with outlines when buttons were
focused.

This commit fixes this issue by using paddings and negative margings to
compensate.

task-3097005

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1751,7 +1751,11 @@ input[value*="data-oe-translation-initial-sha"] {
 }
 
 // Offcanvas menu for in page filters (e.g. product list)
-.o_website_offcanvas .accordion-button {
+.o_website_offcanvas {
+    background: $body-bg;
+}
+
+.accordion-button {
     // Since this nav is visible on mobile only, remove all visual
     // effects related to keyboard/mouse navigation.
     &, &:focus, &:hover {
